@@ -29,6 +29,7 @@ USER-VISIBLE CHANGES:
   easier. (Phil, Gustav Bertram for suggestion)
 - Keep the game from crashing when it cannot create a 'music/' directory.
   (Phil, Andrew McMillan for report)
+- Added checks to avoid key error crashes related to unfinished Construction code.
 
 OTHER CHANGES:
 - Code cleanups and reformatting. (Phil)
